# ros-kafka-demo

./: README.md
robot_soccer_demo/: CMakeLists.txt  package.xml
robot_soccer_demo/launch/: robot_soccer_demo.launch
robot_soccer_demo/scripts/: go2_walking.py  kafka_consumer_node.py  panda_soccer.py  ur5_soccer.py
robot_soccer_demo/scripts/lib/: kafka_producer.py  panda_move_group.py  ur5_move_group.py
